Début d'implémentation de la classe distributeur
