# app/Http/routes.php
@@ -16,3 +16,4 @@ Route::get('/', function () {
 });
 
 Route::resource('film', 'FilmController');
+Route::resource('distributeur', 'DistributeurController');
